# GeometryFiguresNE

./: .gitignore  CMakeLists.txt  input.txt  main.cpp
Tests/: test.cpp
src/Figure/: ShapeController.cpp  ShapeController.h
src/Figure/Canvas/: CCanvas.cpp  CCanvas.h  ICanvas.h
src/Figure/Common/: ConvertColor.cpp  ConvertColor.h  DistanceCalculation.cpp  DistanceCalculation.h  ShapeToStringConverter.cpp  ShapeToStringConverter.h
src/Figure/Exceptions/: CollinearTriangleVertexCoordsException.cpp  CollinearTriangleVertexCoordsException.h  InvalidCircleRadiusException.cpp  InvalidCircleRadiusException.h  InvalidLineVertexCoordsException.cpp  InvalidLineVertexCoordsException.h  InvalidRectangleWidthHeightException.cpp  InvalidRectangleWidthHeightException.h  InvalidTriangleVertexCoords.cpp  InvalidTriangleVertexCoords.h
src/Figure/Factory/: ShapeFactory.cpp  ShapeFactory.h
src/Figure/Service/: ShapeService.cpp  ShapeService.h
src/Figure/Shapes/: CCircle.cpp  CCircle.h  CLineSegment.cpp  CLineSegment.h  CPoint.cpp  CPoint.h  CRectangle.cpp  CRectangle.h  CTriangle.cpp  CTriangle.h  FigureTypeEnum.h  ICanvasDrawable.h  IShape.h  ISolidShape.h
